--- a/front/src/css/app.scss
+++ b/front/src/css/app.scss
@@ -8,3 +8,6 @@
 * {
   font-family: 'customfont';
 }
+.q-page{
+  background-image: url('fondo.jpg'); background-size: cover; background-position: center center;
+}
